--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,1 +1,9 @@
+# Android Studio and Gradle specific entries
+.gradle
+.idea
 /build
+*.iml
+# Mac .DS_Store files
+.DS_Store
+# Proguard file
+mapping.txt
