--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,9 @@
     <!-- SD卡读取权限，用户写入离线定位数据 -->
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <!--开机启动权限-->
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-
+    <!--控制锁屏权限-->
     <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
 
     <application
@@ -26,6 +27,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:persistent="true"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity" />
@@ -40,19 +42,24 @@
         </activity>
 
         <service android:name=".widget.AppWidgetService" />
-        <service android:name=".lock.LockService">
-
-        </service>
 
         <receiver android:name=".widget.QuzuWidget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+                <action android:name="android.appwidget.action.ACTION_REFRESH" />
+                <action android:name="android.appwidget.action.ACTION_ENTER" />
+                <action android:name="android.appwidget.action.ACTION_SHOW" />
+            </intent-filter>
             <meta-data
                 android:name="android.appwidget.provider"
                 android:resource="@xml/provider_quzu_widget" />
         </receiver>
-        <receiver android:name=".MainActivity$ScreenLockReceiver">
+        <service android:name=".lock.LockService"></service>
+        <receiver android:name=".lock.LockService$ScreenLockReceiver">
             <intent-filter android:priority="1000">
+                <action android:name="android.intent.action.SCREEN_OFF" />
                 <action android:name="android.intent.action.SCREEN_ON" />
-                <action android:name="android.intent.action.SCREEN_ON" />
+                <action android:name="android.intent.action.BOOT_COMPLETED"></action>
             </intent-filter>
         </receiver>
 
