--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="test.quzubuluo.com.app">
+    package="com.quzubuluo.quzulock">
 
     <!-- 获取运营商信息，用于支持提供运营商信息相关的接口 -->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -23,27 +23,27 @@
     <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
 
     <application
-        android:name=".App"
+        android:name="com.quzubuluo.quzulock.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:persistent="true"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity" />
+        <activity android:name="com.quzubuluo.quzulock.MainActivity" />
         <activity
-            android:name=".SplashActivity"
+            android:name="com.quzubuluo.quzulock.SplashActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/fullscreen">
+            android:theme="@style/FullStyle">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <service android:name=".widget.AppWidgetService" />
+        <service android:name="com.quzubuluo.quzulock.widget.AppWidgetService" />
 
-        <receiver android:name=".widget.QuzuWidget">
+        <receiver android:name="com.quzubuluo.quzulock.widget.QuzuWidget">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
                 <action android:name="android.appwidget.action.ACTION_REFRESH" />
@@ -54,8 +54,8 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/provider_quzu_widget" />
         </receiver>
-        <service android:name=".lock.LockService"></service>
-        <receiver android:name=".lock.LockService$ScreenLockReceiver">
+        <service android:name="com.quzubuluo.quzulock.lock.LockService"></service>
+        <receiver android:name="com.quzubuluo.quzulock.lock.LockService$ScreenLockReceiver">
             <intent-filter android:priority="1000">
                 <action android:name="android.intent.action.SCREEN_OFF" />
                 <action android:name="android.intent.action.SCREEN_ON" />
@@ -64,7 +64,8 @@
         </receiver>
 
         <activity
-            android:name=".lock.LockActivity"
+            android:name="com.quzubuluo.quzulock.lock.LockActivity"
+            android:theme="@style/LockStyle"
             android:launchMode="singleTop" />
     </application>
 
