--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,5 +35,6 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.4@aar'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'cn.bingoogolapple:bga-banner:2.1.7@aar'
     testCompile 'junit:junit:4.12'
 }
